--- a/erp-web/pom.xml
+++ b/erp-web/pom.xml
@@ -29,6 +29,12 @@
             <version>4.11</version>
             <scope>test</scope>
         </dependency>
+
+        <dependency>
+            <groupId>com.hnguigu</groupId>
+            <artifactId>erp-service</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
     <build>
