--- a/pom.xml
+++ b/pom.xml
@@ -176,7 +176,12 @@
             <version>1.18.16</version>
         </dependency>
 
-
+        <!--  lang3-->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.4</version>
+        </dependency>
         <!-- shiro-->
         <!--    <dependency>-->
         <!--      <groupId>org.apache.shiro</groupId>-->
